# NotAShelf

./: .gitattributes  .gitignore  Justfile  Pipfile  README.md  package.json  pyproject.toml  robots.txt  ruff.toml  shell.nix  test.md
.github/: FUNDING.yml
.github/workflows/: main.yml  profile-readme.yml  project-spotlight.yml  rating-chart.yml  stats.yml
api/: get-trello-cards.js
assets/: README-1.md  README-2.md
code/: rating_chart.py  requirements.txt
codes/: generate_images.py  rating_chart.py  requirements.txt
src/: fetch_blog_feed.py  gen_images.py  gen_project_card.py  gen_random_workflow.py  gen_readme.py  gen_table.py  github_stats.py  rating_chart.py  requirements.txt
src/profile_readme/: __init__.py  blog.py  chess.py  models.py  paths.py  projects.py  readme.py  svg.py  tarot.py  templates.py  workflows.py
templates/: README-1.md  README-2.md  projects.json
util/: __init__.py  cli.py  fetch_blog_feed.py  gen_images.py  gen_random_workflow.py  gen_table.py  github_stats.py  rating_chart.py
